Update War Card Game Project.ipynb

--- a/War Card Game Project.ipynb
+++ b/War Card Game Project.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Project consists of the tasks below:\n",
     "* Create Card Class to allow players to define specific cards played and held in their hand\n",
-    "* Create Packck Class to define the full pack of cards and allow shuffling method\n",
+    "* Create Pack Class to define the full pack of cards and allow shuffling method\n",
     "* Create Player Class to allow the player to hold cards in their hand\n",
     "* Define game logic and use created classes to play "
    ]
