--- a/Advanced-Modules-Exercise-Puzzle.ipynb
+++ b/Advanced-Modules-Exercise-Puzzle.ipynb
@@ -12,9 +12,7 @@
     "\n",
     "This is a puzzle, so we don't want to give you too much guidance and instead have you figure out things on your own.\n",
     "\n",
-    "There is a .zip file called 'unzip_me_for_instructions.zip', unzip it, open the .txt file with Python, read the instructions and see if you can figure out what you need to do!\n",
-    "\n",
-    "**If you get stuck or don't know where to start, here is a [guide/hints](https://docs.google.com/document/d/1JxydUr4n4fSR0EwwuwT-aHia-yPK6r-oTBuVT2sqheo/edit?usp=sharing)**"
+    "There is a .zip file called 'unzip_me_for_instructions.zip', unzip it, open the .txt file with Python, read the instructions and see if you can figure out what you need to do!\n"
    ]
   },
   {
